# src/controllers/bookCollection.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Get, Route, Tags } from "tsoa";
+import { Body, Controller, Get, Post, Route, Tags } from "tsoa";
 import {
 	bookCollectionService,
 	BookCollectionService,
@@ -11,5 +11,23 @@ export class BookCollectionController extends Controller {
 	@Get("/")
 	public async getAllBookCollections(): Promise<BookCollectionDTO[]> {
 		return bookCollectionService.getAllBookCollections();
+	}
+
+	@Get("/{id}")
+	public async getBookCollection(
+		id: number
+	): Promise<BookCollectionDTO | null> {
+		return bookCollectionService.getBookCollectionById(id);
+	}
+
+	@Post("/")
+	public async createBookCollection(
+		@Body() requestBody: BookCollectionDTO
+	): Promise<BookCollectionDTO> {
+		return bookCollectionService.createBookCollection(
+			requestBody.book_id,
+			requestBody.available,
+			requestBody.state
+		);
 	}
 }
